@@ -3,7 +3,7 @@
 AUTOMAKE_OPTIONS = 1.4 foreign
 
 EXTRA_DIST = \
-	convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
+	check-prereqs convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
 	freshen.sh get_magic.pl getpo.sh http.req magic.prov magic.req \
 	perl.prov perl.req rpmdiff u_pkg.sh vpkg-provides.sh vpkg-provides2.sh
 
@@ -13,7 +13,6 @@ all:
 
 configdir = ${prefix}/lib/rpm
 config_SCRIPTS = \
-	convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
+	check-prereqs convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
 	freshen.sh get_magic.pl getpo.sh http.req magic.prov magic.req \
 	perl.prov perl.req rpmdiff u_pkg.sh vpkg-provides.sh vpkg-provides2.sh
-
